master/force-app/main/default/objects/Therapy_Milestone_Task__c/Therapy_Milestone_Task__c.object-meta.xml
<CustomObject>
    <label>Therapy Milestone Task</label>
    <nameField>
        <label>Therapy Milestone Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Therapy Milestone Tasks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>