master/force-app/main/default/objects/Therapy_Milestone_Task__c/fields/Form_Page__c.field-meta.xml
<CustomField>
    <fullName>Form_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form Page</label>
    <referenceTo>Form_Page__c</referenceTo>
    <relationshipLabel>Therapy Milestone Tasks</relationshipLabel>
    <relationshipName>Therapy_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>