master/force-app/main/default/objects/Therapy_Milestone_Task__c/fields/Preceding_Therapy_Milestone_Task__c.field-meta.xml
<CustomField>
    <fullName>Preceding_Therapy_Milestone_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Preceding Therapy Milestone Task</label>
    <referenceTo>Therapy_Milestone_Task__c</referenceTo>
    <relationshipLabel>Therapy Milestone Tasks</relationshipLabel>
    <relationshipName>Therapy_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>