master/force-app/main/default/objects/Therapy_Milestone_Task__c/fields/Therapy_Milestone__c.field-meta.xml
<CustomField>
    <fullName>Therapy_Milestone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Therapy Milestone</label>
    <referenceTo>Therapy_Milestone__c</referenceTo>
    <relationshipLabel>Therapy Milestone Tasks</relationshipLabel>
    <relationshipName>Therapy_Milestone_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>